[package]
name = "dx-gui"
version = "0.1.0"
authors = ["Gabriel Anderson <andergrx@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop", "router", "web"] }

# Debug
dioxus-logger = "0.5.1"
